Adds Support of BITMAP FONTS (BMFONT)- WIP

--- a/DUGL.cbp
+++ b/DUGL.cbp
@@ -65,6 +65,7 @@
 			<Add option="-march=pentium-m" />
 		</Compiler>
 		<Unit filename="DAUDIO.h" />
+		<Unit filename="DBMFONT.h" />
 		<Unit filename="DCONTAIN.h" />
 		<Unit filename="DCONV.h" />
 		<Unit filename="DCORE.h" />
@@ -93,6 +94,13 @@
 			<Option link="0" />
 		</Unit>
 		<Unit filename="audioc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="bmfont.asm">
+			<Option compile="0" />
+			<Option link="0" />
+		</Unit>
+		<Unit filename="bmfontc.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="containc.c">
